<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="11dp"
        android:text="Name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailText"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginTop="41dp"
        android:text="Email"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/firstNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="11dp"
        android:layout_toRightOf="@+id/textView7"
        android:text="First Name"
        android:textSize="18dp">

    </TextView>

    <TextView
        android:id="@+id/lastNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="11dp"
        android:layout_toRightOf="@+id/firstNameText"
        android:text="Last Name"
        android:textSize="18dp">

    </TextView>

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstNameText"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:text="Email"
        android:textSize="16dp">

    </TextView>

    <Button
        android:id="@+id/deleteUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:onClick="deleteUser"
        android:text="Delete"></Button>

    <Button
        android:id="@+id/editUser"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_toLeftOf="@+id/deleteUser"
        android:text="Edit"></Button>

</RelativeLayout>