...
        android:layout_margin="10dp"
        android:text="Create User">

    </Button>

    <ListView
        android:id="@+id/admin_user_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adminHomeText">

    </ListView>

...
